--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-mail'
-//    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -51,6 +51,9 @@ dependencies {
 
     // https://mvnrepository.com/artifact/com.cloudinary/cloudinary-http5
     implementation("com.cloudinary:cloudinary-http5:2.2.0")
+    // https://mvnrepository.com/artifact/org.mindrot/jbcrypt
+//    implementation group: 'org.mindrot', name: 'jbcrypt', version: '0.4'
+
 }
 
 tasks.named('test') {
