--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,10 @@ server.port=9999
 #c?u hình context path
 #server.servlet.context-path=/api.hunghx.com/v1
 # c?u hình CSDL
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/api?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=123456$
+
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USER}
+spring.datasource.password=${DATABASE_PASSWORD}
 
 #Cau hinh bibernate properties
 spring.jpa.hibernate.ddl-auto=update
@@ -26,7 +26,7 @@ spring.mail.default-encoding=UTF-8
 
 # T? ??nh ngh?a c?u hình
 jwt.expired=86400000
-jwt.sercret-key=
+jwt.sercret-key=hunghx123456
 
 
 #C?u hin cloud
